yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers:
        - name: task1container
          image: amitmenashe/task1:1
          ports:
            - containerPort: 5000
