yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1
spec:
  selector:
    app: task1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
